--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "supervisor server.js",
+    "server": "supervisor server.js",
     "build": "set NODE_ENV='production' && webpack -p",
     "deploy": "set NODE_ENV='production' && webpack -p --config webpack.production.config.js",
     "devserver": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 9999 --host 0.0.0.0",
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.0.1",
     "babel-core": "^6.14.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.13.0",
@@ -23,11 +24,17 @@
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
+    "mongoose": "^4.6.2",
     "nconf": "^0.8.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
     "serve-favicon": "^2.3.0",
     "winston": "^2.2.0"
   },
