--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "serve-favicon": "^2.3.0",
     "winston": "^2.2.0"
   },
@@ -53,6 +54,7 @@
     "node-sass": "^3.10.0",
     "postcss-loader": "^0.13.0",
     "react-hot-loader": "^1.3.0",
+    "redux-logger": "^2.6.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
