--- a/.eslintrc
+++ b/.eslintrc
@@ -15,8 +15,8 @@
     "no-underscore-dangle": 0,
     "no-use-before-define": 0,
     "eol-last": 0,
-    "quotes": [2, "single"],
-    "jsx-quotes": 1,
+    "quotes": 0,
+    "jsx-quotes": 0,
     "react/jsx-no-undef": 1,
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1
